# vuln-prioritizer-workbench

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  alembic.ini  compose.override.yml  compose.traefik.yml  compose.yml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: attack_mapping_review.md  bug_report.md  config.yml  feature_request.md  parser.md  provider.md  security_hardening.md
.github/examples/: README.md  code-scanning-sarif.yml  html-report-artifact.yml  pr-comment-report.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  maintenance.yml  release.yml  testpypi.yml
backend/: Dockerfile  MANIFEST.in  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  models.py
backend/tests/: _cli_helpers.py  _input_fixture_contracts.py  conftest.py  paths.py  test_analysis_refactor.py  test_attack_enrichment.py  test_benchmark_regressions.py  test_cache.py  test_cli_attack.py  test_cli_data.py  test_cli_state.py  test_evidence_bundle_verification.py  test_extension_sdk.py  test_github_action_contract.py  test_github_alerts_normalization.py  test_grype_json_parser.py  test_input_fixtures.py  test_input_loader_contracts.py  test_output_schemas.py  test_parser.py  test_provider_contract.py  test_providers.py  test_refactor_hygiene.py  test_remediation_service.py  test_report_io_helpers.py  test_reporter.py  test_reporting_format_helpers.py  test_rollup_regressions.py  test_runtime_config.py  test_scoring.py  test_snapshot_diff_regressions.py  test_state_store.py  test_trivy_json_parser.py  test_utils.py  test_v11_output_contracts.py  test_workbench_integration_contracts.py
data/: demo_provider_snapshot.json
data/attack/: attack_stix_enterprise_16.1_subset.json
data/input_fixtures/: cve_list_context.csv  cve_list_duplicates.csv  cve_list_invalid.txt  cve_list_valid.txt  generic_occurrences.csv  generic_occurrences_invalid.csv  generic_occurrences_missing_cve.csv  generic_occurrences_semicolon.csv  kev_catalog.csv  kev_catalog.json  normalization_contracts.json
data/uploads/: demo-waivers.yml
docs/: architecture.md  benchmarking.md  community_repository_setup.md  contracts.md  cve-list-import.md  evidence.md  example_attack_compare.md  example_attack_coverage.md  example_attack_explain.json  example_attack_report.md  example_compare.md  example_explain.json  example_report.md  full_stack_fastapi_template_migration.md  generic-occurrence-csv-import.md  grype-json-import.md  index.md  methodology.md  playbooks.md  release_operations.md  roadmap.md  support_matrix.md  trivy-json-import.md  use_cases.md  vpw_template_execution_sequence.md  workbench-attack-methodology.md  workbench-engineering-roadmap-attack-ttp-v3.md  workbench-masterplan-attack-ttp-v2.md  workbench-masterplan.md  workbench-offline-demo.md  workbench-threat-model.md  workbench-v1-release-checklist.md
docs/architecture/: analysis-run-provider-schema.md  core-workbench-schema.md  index.md  model-imports.md  template-replacement.md  template-service-layer.md  vpw-011-api-skeleton.md  vpw-013-importer-contract.md  vpw-022-provider-cache-status-snapshots.md  vpw-023-epss-provider-cache.md  vpw-024-kev-provider-cache.md  vpw-025-nvd-provider-fallback.md  vpw-026-provider-snapshot-replay.md  vpw-027-provider-data-quality-flags.md
docs/evidence/: full_stack_fastapi_template_baseline.md
docs/examples/: example_kev_enrichment_response.json  example_nvd_provider_record.json  example_pr_comment.md  example_provider_snapshot.v1.json  example_report.html  example_results.sarif  github_action_summary_templates.md
docs/integrations/: reporting_and_ci.md
docs/playbooks/: ci_container_scanning.md  infrastructure_scan_triage.md  sbom_triage.md
docs/releases/: v0.2.0.md  v0.3.0.md  v1.0.0.md  v1.1.0.md  v1.2.0.md  workbench-v1.0.0.md
docs/schemas/: analysis-report.schema.json  attack-coverage-report.schema.json  attack-validation-report.schema.json  compare-report.schema.json  data-status-report.schema.json  data-update-report.schema.json  data-verify-report.schema.json  doctor-report.schema.json  evidence-bundle-manifest.schema.json  evidence-bundle-verification-report.schema.json  explain-report.schema.json  input-inspect-report.schema.json  input-validation-report.schema.json  provider-snapshot-report.schema.json  rollup-report.schema.json  snapshot-diff-report.schema.json  snapshot-report.schema.json  state-history-report.schema.json  state-import-report.schema.json  state-init-report.schema.json  state-service-history-report.schema.json  state-top-services-report.schema.json  (+2 more)
examples/: cve-list.txt  generic-occurrences.csv  grype-demo.json  trivy-demo.json
frontend/: .gitignore  Dockerfile  Dockerfile.playwright  README.md  biome.json  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: bootstrap_full_stack_template_baseline.sh  check_package_static_assets.py  generate-client.sh  installed_web_smoke.py  p1_installed_cli_smoke.sh  p1_pipx_source_smoke.sh  p2_installed_cli_smoke.sh
tests/: conftest.py  test_asset_context_rules.py  test_benchmark_regressions.py  test_cli.py  test_cli_attack.py  test_cli_data.py  test_cli_state.py  test_evidence_bundle_verification.py  test_github_action_contract.py  test_github_alerts_normalization.py  test_input_loader_contracts.py  test_input_loader_merge.py  test_model_facade.py  test_output_schemas.py  test_providers.py  test_refactor_hygiene.py  test_remediation_service.py  test_report_io_helpers.py  test_reporter.py  test_reporting_format_helpers.py  test_rollup_regressions.py  test_runtime_config.py  test_scoring.py  test_state_store.py  test_v11_output_contracts.py  test_vex_matching.py  test_waivers.py  test_workbench_guardrail_helpers.py
(+410 files in other folders)
