[project]
name = "vuln-prioritizer-workbench-workspace"
version = "0.0.0"
description = "Workspace metadata for the Vuln Prioritizer Workbench migration."
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["backend"]

[tool.pytest.ini_options]
addopts = "-ra --cov=vuln_prioritizer --cov-report=term-missing --cov-fail-under=90"
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
markers = [
  "browser_e2e: real browser Workbench tests driven by Playwright.",
  "e2e: end-to-end CLI entrypoint tests that may spawn subprocesses.",
  "live_network: allow real network access through requests in this test.",
]

[tool.ruff]
extend = "backend/pyproject.toml"

[tool.mypy]
python_version = "3.11"
files = ["backend/src"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.coverage.run]
omit = [
  "backend/src/vuln_prioritizer/db/alembic/env.py",
  "backend/src/vuln_prioritizer/db/alembic/versions/*.py",
]
